--- a/scss/pages/_technology.scss
+++ b/scss/pages/_technology.scss
@@ -201,6 +201,9 @@
     max-width: 30rem;
     font-size: 0.9375rem; // ✅ Add font size for better scaling
     line-height: 1.6;
+    font-family: "Barlow", sans-serif;
+    color: $color-blue-300;
+    text-transform: none !important;
 
     @include media($tablet) {
       font-size: 1rem;
@@ -224,6 +227,8 @@
 
   &__terminology {
     font-size: 0.875rem;
+    font-family: "Bellefair", serif;
+    color: $color-white;
 
     @include media($tablet) {
       font-size: 1rem;
@@ -232,6 +237,8 @@
 
   &__name {
     font-size: 1.5rem;
+    font-family: "Bellefair", serif;
+    color: $color-white;
 
     @include media($tablet) {
       font-size: 2.5rem;
