--- a/scss/pages/_crew.scss
+++ b/scss/pages/_crew.scss
@@ -145,6 +145,15 @@
       flex-shrink: 0;
     }
   }
+
+  &__name {
+    @include media($tablet) {
+      font-size: 2.5rem;
+    }
+    @include media($desktop) {
+      font-size: 3.5rem;
+    }
+  }
 }
 
 /*  */
@@ -164,7 +173,7 @@
 
 body.crew-page {
   /* Mobile first - default (mobile) image */
-  background-image: url("../../assets/crew/background-crew-mobile.jpg");
+  background-image: url("/assets/crew/background-crew-mobile.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -173,13 +182,13 @@ body.crew-page {
 /* Tablet */
 @media (min-width: 768px) {
   body.crew-page {
-    background-image: url("../../assets/crew/background-crew-tablet.jpg");
+    background-image: url("/assets/");
   }
 }
 
 /* Desktop / large screens */
 @media (min-width: 1024px) {
   body.crew-page {
-    background-image: url("../../assets/crew/background-crew-desktop.jpg");
+    background-image: url("/assets/crew/background-crew-desktop.jpg");
   }
 }
