--- a/scss/pages/_technology.scss
+++ b/scss/pages/_technology.scss
@@ -281,7 +281,7 @@
 /* Background images */
 /* ---------------------------------------------------------------------- */
 body.technology-page {
-  background-image: url("/assets/technology/background-technology-mobile.jpg");
+  background-image: url("../assets/technology/background-technology-mobile.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -290,12 +290,12 @@ body.technology-page {
 
 @media (min-width: 768px) {
   body.technology-page {
-    background-image: url("/assets/technology/background-technology-tablet.jpg");
+    background-image: url("../assets/technology/background-technology-tablet.jpg");
   }
 }
 
 @media (min-width: 1024px) {
   body.technology-page {
-    background-image: url("/assets/technology/background-technology-desktop.jpg");
+    background-image: url("../assets/technology/background-technology-desktop.jpg");
   }
 }
